# UnitTestingGeneratorForCpp

./: CMakeLists.txt  README.md
src/: string_utils.cpp  string_utils.h
tests/: string_utils_test.cpp
